@@ -1097,8 +1097,8 @@
          </table>
 
 <ul>
-         <p><span class="small">always/failure</span><br/>
-	 All forms of the EmailPublisher allow both always and failure sub-elements.  These identify e-mail addresses that should always be sent mail or sent mail only on failed builds.</p>
+         <p><span class="small">always/failure/success</span><br/>
+	 All forms of the EmailPublisher allow always, failure, and success sub-elements.  These identify e-mail addresses that should always be sent mail or sent mail only on failed builds or sent mail only on successful builds.</p>
          <table cellpadding="3" cellspacing="1" border="0">
             <tr>
                <td class="tableheader">Attribute</td>
